CODE AMBIGUITY ERROR  (METHOD OVERLOADING)
CODE AMBIGUITY ERROR  (METHOD OVERLOADING):

import java.util.*;
class Test{
    void show(int a,float b){
        System.out.println("2 args int-float method");
    }
    void show(int a,int b,int c){
        System.out.println("3 args int method");
    }
    void show(float a,int b){//ERROR, CANNOT CONVERT FROM FLOAT TO INT 
        System.out.println("2 args float-int method");
    }
    void show (double a,double b){
         System.out.println("2 args double method");
    }
    public static void main(String[] args) {
      Test t1=new Test();
      t1.show(11,23,13);
      t1.show(34.5,12.9);
      t1.show(10,10);
      t1.show('A','B','U');//char is converted into integer datatype
    }
}

OUTPUT:
ERROR!
/tmp/LrxkDVvdOc/Test.java:21: error: reference to show is ambiguous
      t1.show(10,10);
        ^
  both method show(int,float) in Test and method show(float,int) in Test match
1 error
